tests/paczka1/small_fuzzy/85975393.err
Error in line 4: VFUv4HhKA A718 7,7
Error in line 3: ViKZacWwk5 A676 46,0
